# Wyvern

./: .gitignore  CLAUDE.md  Cargo.toml  IMPLEMENTATION_ROADMAP.md  NEXT_SESSION_GUIDE.md  PHASE_1_IMPLEMENTATION_PLAN.md  PHASE_ROADMAP.md  SESSION_2_SUMMARY.md  TODOS_AND_BRAINSTORMS.md  config.example.toml  rust-toolchain.toml
.claude/: settings.local.json
docs/: ARCHITECTURE.md
logs/: .07b7ec869bed6a09f57f0ac4c8272a25c7397e78-audit.json
src/: config.rs  cursor.rs  drawing.rs  focus.rs  input_handler.rs  lib.rs  main.rs  render.rs  state.rs  udev.rs  winit.rs  x11.rs
src/shell/: element.rs  grabs.rs  mod.rs  ssd.rs  x11.rs  xdg.rs
tests/: integration_test.rs
