[package]

# OLD: authors = ["Victor Berger <victor.berger@m4x.org>", "Drakulix (Victoria Brekenfeld)"]
authors = ["NEOAPPS <asd22.info@gmail.com>"]
edition = "2021"
license = "MIT"
name = "wyvern"
publish = false
version = "0.0.1"

[dependencies]
bitflags = "2.2.1"
fps_ticker = {version = "1.0.0", optional = true}
image = {version = "0.25.1", default-features = false, optional = true, features = ["png"]}
rand = "0.8"
tracing = { version = "0.1.37", features = ["max_level_trace", "release_max_level_debug"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
thiserror = "1"
xcursor = {version = "0.3.3", optional = true}
xkbcommon = "0.8.0"
renderdoc = {version = "0.11.0", optional = true}
smithay-drm-extras = {version = "0.1.0", optional = true}
puffin_http = { version = "0.13", optional = true }
profiling = { version = "1.0" }
once_cell = "1.21.3"
toml = "0.8.23"
bincode = { version = "2.0.1", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
dirs = "6.0.0"
shell-words = "1.1.0"
wayland-protocols = { version = "0.32.8", features = ["unstable"] }
wayland-protocols-wlr = { version = "0.3.8", features = ["server", "wayland-server"] }
wayland-server = "0.31.9"
calloop = "0.14.3"

[dependencies.smithay]
default-features = false
features = ["desktop", "wayland_frontend"]
version = "0.7.0"

[dependencies.x11rb]
default-features = false
features = ["composite"]
optional = true
version = "0.13.2"

[build-dependencies]
gl_generator = "0.14"
wayland-scanner = "0.31.7"

[features]
debug = ["fps_ticker", "image/png", "renderdoc"]
default = ["egl", "winit", "x11", "udev", "xwayland"]
egl = ["smithay/use_system_lib", "smithay/backend_egl"]
# Fixed: test_all_features removed to avoid Tracy+Puffin macro conflict
# Use test-tracy or test-puffin instead
test-tracy = ["default", "debug", "profile-with-tracy"]
test-puffin = ["default", "debug", "profile-with-puffin"]
udev = [
  "smithay-drm-extras",
  "smithay/backend_libinput",
  "smithay/backend_udev",
  "smithay/backend_drm",
  "smithay/backend_gbm",
  "smithay/backend_vulkan",
  "smithay/backend_egl",
  "smithay/backend_session_libseat",
  "image",
  "smithay/renderer_gl",
  "smithay/renderer_pixman",
  "smithay/renderer_multi",
  "smithay/desktop",
  "smithay/wayland-protocols",
  "smithay/wayland-protocols-wlr",
  "smithay/wayland-server",
  "xcursor",
]
winit = ["smithay/backend_winit", "smithay/backend_drm"]
x11 = ["smithay/backend_x11", "x11rb", "smithay/renderer_gl", "smithay/backend_vulkan"]
xwayland = ["smithay/xwayland", "x11rb", "smithay/x11rb_event_source", "xcursor"]
profile-with-puffin = ["profiling/profile-with-puffin", "puffin_http"]
profile-with-tracy = ["profiling/profile-with-tracy"]
profile-with-tracy-mem = ["profile-with-tracy"]
renderer_sync = []
config-cache = ["bincode"]
